--- a/clusters/kubernello/flux-system/gotk-sync.yaml
+++ b/clusters/kubernello/flux-system/gotk-sync.yaml
@@ -19,7 +19,21 @@ metadata:
   namespace: flux-system
 spec:
   interval: 10m0s
-  path: ./clusters/kubernello
+  path: ./clusters/kubernello/flux-system
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  validation: client
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
+kind: Kustomization
+metadata:
+  name: cert-manager
+  namespace: flux-system
+spec:
+  interval: 10m0s
+  path: ./clusters/kubernello/cert-manager
   prune: true
   sourceRef:
     kind: GitRepository
