add cluster issue and example app

--- a/clusters/kubernello/flux-system/gotk-sync.yaml
+++ b/clusters/kubernello/flux-system/gotk-sync.yaml
@@ -39,3 +39,37 @@ spec:
     kind: GitRepository
     name: flux-system
   validation: client
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
+kind: Kustomization
+metadata:
+  name: cluster-issuer
+  namespace: flux-system
+spec:
+  interval: 10m0s
+  path: ./clusters/kubernello/cluster-issuer
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  validation: client
+  dependsOn:
+    - name: cert-manager
+      namespace: flux-system
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
+kind: Kustomization
+metadata:
+  name: example-app
+  namespace: flux-system
+spec:
+  interval: 10m0s
+  path: ./clusters/kubernello/example-app
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  validation: client
+  dependsOn:
+    - name: cluster-issuer
+      namespace: flux-system
