add hetzner secret with sops

--- a/clusters/kubernello/flux-system/gotk-sync.yaml
+++ b/clusters/kubernello/flux-system/gotk-sync.yaml
@@ -89,3 +89,6 @@ spec:
     kind: GitRepository
     name: flux-system
   validation: client
+  decryption:
+    provider: sops
+    secret: sops-gpg
