--- a/clusters/kubernello/external-dns/helmrelease.yaml
+++ b/clusters/kubernello/external-dns/helmrelease.yaml
@@ -14,4 +14,13 @@ spec:
         name: bitnami
         namespace: flux-system
       interval: 1m
-  values: {}
+  values:
+    provider: hetzner
+    domainFilters:
+      - livefun.dev
+  valuesFrom: 
+    - kind: Secret
+      name: hetzner
+      valuesKey: TOKEN
+      targetPath: hetzner.token
+
